2009-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/strtok.c,
	  support/regression/tests/strstr.c,
	  support/regression/tests/strspn.c,
	  support/regression/tests/strncmp.c,
	  support/regression/tests/strcpy.c,
	  support/regression/tests/strcmp.c:
	  Added some regression tests by Ruud van Silfhout from patch #2321830.

2009-04-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/hc08/Makefile.in, device/lib/mcs51/Makefile.in,
	  device/lib/z80/Makefile.in: override PORTDIR in sub-makefiles

2009-04-13 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/bootstrap.sh: avoid symlinks
	* device/lib/pic16/configure.ac,
	  device/lib/pic16/configure.gnu: removed obsolete configure-wrapper

2009-04-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/Makefile.in: remove abspath for PORTDIR, introduced in
	  svn revision #5341, since it makes asranlib to fail on cygming and
	  mingw builds: win32 native asranlib doesn't understand cygwin paths.

2009-04-10 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libsdcc/fs2ulong.c, device/lib/pic/libsdcc/fsadd.c,
	  device/lib/pic/libsdcc/fsdiv.c, device/lib/pic/libsdcc/fseq.c,
	  device/lib/pic/libsdcc/fsgt.c, device/lib/pic/libsdcc/fslt.c,
	  device/lib/pic/libsdcc/fsmul.c, device/lib/pic/libsdcc/fsneq.c,
	  device/lib/pic/libsdcc/fssub.c, device/lib/pic/libsdcc/ulong2fs.c,
	  device/lib/pic16/libsdcc/float/fs2ulong.c,
	  device/lib/pic16/libsdcc/float/fsadd.c,
	  device/lib/pic16/libsdcc/float/fsdiv.c,
	  device/lib/pic16/libsdcc/float/fsmul.c: fixed pic14 libraries, merge
	  changes from the pic16 port, minor code cleanup
	* src/pic/gen.c: implemented genUminusFloat(), fixed warning and style

2009-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/mod.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/div.s,
	  device/lib/z80/modsigned.s,