@@ -1,17 +1,12 @@
         .area   _CODE
 
 __mulint_rrx_s::
-        ld      hl,#2
-        add     hl,sp
-
-        ld      e,(hl)
-        inc     hl
-        ld      d,(hl)
-        inc     hl
-        ld      a,(hl)
-        inc     hl
-        ld      h,(hl)
-        ld      l,a
+        pop     af
+        pop     hl
+        pop     de
+        push    de
+        push    hl
+        push    af
 
         ;; Fall through
 
